# mcp-python-runner

./: .gitignore  Dockerfile  README.md  pyproject.toml
mcp_python_runner/: main.py  server.py  server_test.py
